Add basic semantic tags & comments to base.html

--- a/templates/base.html
+++ b/templates/base.html
@@ -16,6 +16,25 @@
 
 <body>
 
+    <header>
+        <!-- main navbar -->
+        <nav>
+
+        </nav>
+
+        <!-- mobile sidenav -->
+    </header>
+
+    <section>
+        <!-- flash messages -->
+    </section>
+
+    <main>
+        {% block content %}
+
+        {% endblock %}
+    </main>
+
     {{ word }}
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"
         integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
