--- a/templates/home.html
+++ b/templates/home.html
@@ -5,7 +5,8 @@
     </div>
 
     <h3 class="center main-heading"> What is the Yurt Index?</h3>
-    <div class="row">
+
+    <div class="row home-description">
         <div class="col green darken-1 white-text">
             <p>
                 The Yurt Index aims to be a definitive list of Irish slang online. With a particular focus on a lot of
