--- a/templates/base.html
+++ b/templates/base.html
@@ -23,7 +23,7 @@
             <div class="green darken-1 nav-wrapper">
                 <a href="#!" class="center brand-logo">Yurt Index</a>
                 <a href="#" data-target="mobile-demo" class="sidenav-trigger right"><i
-                        class="material-icons">menu</i></a>
+                        class="material-icons nav-icon">menu</i></a>
                 <ul class="right hide-on-med-and-down">
                     <li><a href="sass.html">Home</a></li>
                     <li><a href="badges.html">Components</a></li>
