--- a/static/css/style.css
+++ b/static/css/style.css
@@ -9,8 +9,12 @@ body {
     flex: 1 0 auto;
   } */
 
-p {
+.home-description p {
     text-align: center;
+}
+
+header {
+    margin-bottom: 30px;
 }
 
 main {
@@ -28,4 +32,13 @@ main {
     width: 100%;
     height: 36vh;
     margin-top: 26px;
+}
+
+
+.alternative-spellings-container {
+    opacity: .7;
+}
+
+.word-card {
+    margin-top: 8%;
 }
