--- a/templates/word-page.html
+++ b/templates/word-page.html
@@ -47,7 +47,8 @@
         
         <!-- display who created the word and when -->
         <p>
-            Created by: <span class="created-by">{{word.createdBy}}</span> on <span class="date-created"> {{word.dateCreated}} </span>
+            Created by:
+            <span class="created-by">{{word.createdBy}}</span> on <span class="date-created">{{word.dateCreated}}</span>
         </p>
 
       </div>
