Add rating icons and number to word-page

--- a/templates/word-page.html
+++ b/templates/word-page.html
@@ -53,8 +53,9 @@
 
       </div>
       <div class="card-action">
-        <a href="#">This is a link</a>
-        <a href="#">This is a link</a>
+        <a href="#"><i class="material-icons">thumb_up</i></a>
+        <a href="#"><i class="material-icons">thumb_down</i></a>
+        <span class="rating-number"> {{ word.rating }} </span>
       </div>
     </div>
   </div>
