Add new_word html temmplate

--- a/templates/base.html
+++ b/templates/base.html
@@ -27,7 +27,7 @@
                         class="material-icons nav-icon">menu</i></a>
                 <ul class="right hide-on-med-and-down">
                     <li><a href="{{ url_for('home_page') }}">Home</a></li>
-                    <li><a href="badges.html">Components</a></li>
+                    <li><a href="{{ url_for('new_word') }}">New Word</a></li>
                     <li><a href="collapsible.html">Javascript</a></li>
                     <li><a href="mobile.html">Mobile</a></li>
                 </ul>
