--- a/static/css/style.css
+++ b/static/css/style.css
@@ -42,3 +42,10 @@ main {
 .word-card {
     margin-top: 8%;
 }
+
+.add-spelling-button {
+    padding-left: 8%;
+    color: green;
+    opacity: .8;
+    font-size: .9em;
+}
