--- a/templates/base.html
+++ b/templates/base.html
@@ -35,8 +35,8 @@
         </nav>
         <!-- mobile sidenav -->
         <ul class="green darken-1 sidenav" id="mobile-demo">
-            <li><a href="sass.html">Sass</a></li>
-            <li><a href="badges.html">Components</a></li>
+            <li><a href="{{ url_for('home_page') }}">Home</a></li>
+            <li><a href="{{ url_for('new_word') }}">New Word</a></li>
             <li><a href="collapsible.html">Javascript</a></li>
             <li><a href="mobile.html">Mobile</a></li>
         </ul>
