--- a/static/css/style.css
+++ b/static/css/style.css
@@ -43,9 +43,20 @@ main {
     margin-top: 8%;
 }
 
-.add-spelling-button {
-    padding-left: 8%;
-    color: green;
-    opacity: .8;
-    font-size: .9em;
+.add-alt-button {
+    opacity: .9;
+    background-color: white;
+    margin-bottom: 5px;
+    box-shadow: 0px 0px 0px white;
+    font-size: 1em;
+    line-height: 18px;
+    text-transform: none;
+}
+
+.new-word-input {
+    margin: 0px;
+}
+
+.new-word-cancel-submit {
+    line-height: 10px;
 }
