--- a/templates/word-page.html
+++ b/templates/word-page.html
@@ -64,6 +64,7 @@
                 <a href="#"><i class="material-icons">thumb_up</i></a>
                 <a href="#"><i class="material-icons">thumb_down</i></a>
                 <span class="rating-number"> {{ word.rating }} </span>
+                <a class="btn yellow right green-text" href="{{ url_for('edit_word', word_Id=word._id) }}">Edit</a>
             </div>
         </div>
     </div>
